[tool.poetry]
name = "wm-resource-monitor"
version = "1.0.0"
description = "Workload Management Resource Control Monitor"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-compress = "^1.14"
prometheus-flask-exporter = "^0.22.3"
gunicorn = "^21.2.0"
cryptography = "^41.0.7"
werkzeug = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true 